src/test/deca/context/invalid/class/38_exempleSlide2.deca
/* Description:
    un programme simple fournie dans les slides

    Historique:
      cree le 20/01/2020
    Sortie attendu:
     erreur pendant la passe 2 (typr doit être different de void )
*/
class A {
  void x;
}
